--- a/banking/src/main/resources/application.properties
+++ b/banking/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8081
 
 spring.datasource.url=jdbc:h2:mem:bank
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
